Drive implementation